# Agent-SWE

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  Cargo.toml  Dockerfile  README.md  auto_publish.sh  autonomous_test_output.jsonl  autonomous_test_output.parquet  benchmark_output.json  benchmark_results.json  benchmark_validation_report.md  continuous_pipeline.py  demo_tasks.jsonl  exported_tasks.parquet  install.sh  pyproject.toml  regenerate_tests.py  run_generation.sh  run_mine.bat  run_mine.sh  validation_summary.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docker.yml  nightly.yml  release.yml  test.yml
generated-datasets/: PROBLEME_ET_SOLUTIONS.md  README.md  WORKFLOW.md  create_verifiable_task.py  setup_task_env.sh  verify_solution.py
generated-datasets/8af974f6-4cf8-4793-9732-0fa62346ee59/: prompt.md  solution.sh  task.yaml
generated-datasets/9a9e5e56-3cae-4900-95d6-7a905d4830cd/: prompt.md  solution.sh  task.yaml
generated-datasets/9e94c50c-f149-4d84-bbc1-413fcbce90de/: prompt.md  solution.sh  task.yaml
generated-datasets/f3992eb4-505f-4944-9cca-7971e1c29326/: prompt.md  solution.sh  task.yaml
generated-datasets/fbeca9c5-a36e-4cef-8663-0f13b7b139fc/: prompt.md  solution.sh  task.yaml
generated-datasets/fc132552-291c-428d-8430-14ed0db1e1b8/: prompt.md  solution.sh  task.yaml
generated-datasets/workspace-javascript-api/: package.json  prompt.md  task.yaml
generated-datasets/workspace-python-api/: config.py  prompt.md  requirements.txt  task.yaml
generated-datasets/workspace-rust-cli/: Cargo.toml  prompt.md  task.yaml
generated-datasets/workspace-rust-cli/src/: cli.rs  config.rs  lib.rs  main.rs
generated-datasets/workspace-rust-cli/src/processor/: mod.rs  parser.rs  transformer.rs
generated-datasets/workspace-rust-cli/src/storage/: file_handler.rs
generated-datasets/workspace-rust-cli/src/utils/: crypto.rs  mod.rs  validation.rs
generated-datasets/workspace-rust-cli/verification/: verify_fixes.rs
migrations/: 20240101000001_initial_schema.sql
prompts/debate/: README.md  personas.md  topics.md
prompts/vulnerability-injection/: README.md  cleaning-guide.md  injection-guide.md
prompts/workspace-generation/: README.md  code-generation.md  ideation.md
scripts/: benchmark_evaluation.py  fix_tasks.py  install-hooks.sh  pre-commit  pre-push  revalidate_tasks.py  run_evaluation.py  run_production.sh  test_agent_task.py
src/: error.rs  lib.rs  main.rs
src/agents/: AGENTS.md  analyzer_agent.rs  code_cleaner.rs  code_generator.rs  collector_agent.rs  debate_agents.rs  debate_orchestrator.rs  difficulty_amplifier.rs  difficulty_validator.rs  docker_validator.rs  environment_builder.rs  error.rs  feasibility_validator.rs  ideator.rs  mod.rs  problem_crafter.rs  research_agent.rs  synthetic_generator_agent.rs  task_evaluator.rs  task_executor.rs  task_validator.rs  test_designer.rs  validator_agent.rs  vulnerability_injector.rs  workspace_ideator.rs  workspace_orchestrator.rs  workspace_validator.rs
src/anti_hardcoding/: AGENTS.md  canary.rs  mod.rs  process_validation.rs  sealed.rs
src/cli/: AGENTS.md  commands.rs  mod.rs  self_update.rs
src/difficulty/: AGENTS.md  mod.rs
src/diversity/: embeddings.rs  metrics.rs
src/docker/: AGENTS.md  compose.rs  dockerfile.rs  mod.rs  resources.rs
src/execution/: AGENTS.md  container.rs  docker_client.rs  mod.rs  resources.rs
src/export/: AGENTS.md  dataset.rs  hf_uploader.rs  mod.rs  parquet_writer.rs
src/generator/: instance.rs
src/llm/: AGENTS.md  cache.rs  cost.rs  litellm.rs  mod.rs  router.rs
src/runner/: AGENTS.md  config.rs  executor.rs  mod.rs  result.rs  sandbox.rs  verifier.rs
src/scheduler/: worker_pool.rs
src/swe/: AGENTS.md  docker_sandbox.rs  enricher.rs  extractor.rs  filters.rs  gharchive.rs  github_search.rs  harness.rs  mod.rs  orchestrator.rs  pipeline.rs  pr_cache.rs  progress.rs  prompt_rewriter.rs  quality.rs  rechecker.rs  sandbox_tools.rs  test_generator.rs  tool_server.rs  workspace_validator.rs
src/swe_forge/: __main__.py  config.py  exceptions.py  logging_config.py
src/utils/: AGENTS.md  json_extraction.rs  mod.rs
src/workspace/: cleaner.rs  exporter.rs  generator.rs  mod.rs  types.rs
tasks-hard/OpenWSGR-AutoWSGR-388/: patch.diff  workspace.yaml
tasks-hard/Unity-Technologies-com.unity.toonshader-771/: patch.diff  workspace.yaml
tasks-hard/WiVRn-WiVRn-849/: patch.diff  workspace.yaml
tasks-hard/ai2cm-ace-930/: patch.diff  test_patch.diff  workspace.yaml
tasks-hard/bagofwords1-bagofwords-165/: patch.diff  workspace.yaml
tasks-hard/ballerina-platform-ballerina-performance-cloud-31304/: patch.diff  workspace.yaml
test-run/: VALIDATION_REPORT.md
tests/: test_config.py  test_logging_config.py
(+996 files in other folders)
