[package]
name = "dataforge"
version = "0.1.0"
edition = "2021"
description = "Data pipeline orchestration framework for LLM evaluation with multi-agent validation"
license = "MIT"
repository = "https://github.com/dataforge/dataforge"
readme = "README.md"
keywords = ["dataforge", "pipeline", "llm", "evaluation", "agents"]

[[bin]]
name = "dataforge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
bollard = { version = "0.16", features = ["ssl"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
ndarray = "0.15"
ordered-float = "4.2"
pin-project-lite = "0.2"
prometheus = "0.13"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid", "json"] }
tempfile = "3.0"
tera = "1.19"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full", "sync"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"
