[project]
name = "swe_forge"
version = "0.1.0"
description = "SWE-bench dataset generator and evaluation harness"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9.0", "aiodocker>=0.22.0", "pydantic>=2.5.0", "pydantic-settings>=2.1.0", "litellm>=1.20.0", "typer>=0.9.0", "rich>=13.7.0", "aiosqlite>=0.19.0", "aiofiles>=23.2.0", "pyarrow>=15.0.0", "huggingface_hub>=0.20.0", "tenacity>=8.2.0", "structlog>=24.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "mypy>=1.8.0", "ruff>=0.2.0", "anthropic>=0.18.0"]

[project.scripts]
swe-forge = "swe_forge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
