[package]
name = "file-processor"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for processing and transforming files"
authors = ["File Processor Team"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
md5 = "0.7"

[dev-dependencies]
tempfile = "3"
